--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,17 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.2.5] - 2020-02-07
+### Changed
+- review upgrade
+- upgrade now supports charm uri with target revision number
+- tests for upgrades
+
+## [0.2.4] - 2020-02-03
+### Changed
+- review testing
+- patch yaml load deprecation
+
 ## [0.2.3] - 2020-01-10
 ### Changed
 - upping dependencies for python-libjuju to 2.7.1
