--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.2.6] - 2020-02-24
+### Changed
+- deploy adds error-timeout to fail with timeout in case app stays too long in error status
+- changed wait delays before reporting deploy is considered finished, to cope with slower reactive changes
+
 ## [0.2.5] - 2020-02-07
 ### Changed
 - review upgrade
