--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.2.8] - 2020-10-12
+### Changed
+- set dependency to libjuju 2.8.0
+
 ## [0.2.7] - 2020-03-01
 ### Changed
 - add tcp6 file as a source for open ports in network exporter
